--- a/src/components/Thumb/index.css
+++ b/src/components/Thumb/index.css
@@ -22,11 +22,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#FFFFFF, #000000);
-  opacity: 0;
-  /* background-image:
-    linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
-    url('images/background.jpg'); */
+  background: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
+  opacity: 0.7;
 }
 
 .thumb-title {
