--- a/src/components/Banner/index.css
+++ b/src/components/Banner/index.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 223px;
+  height: 111px;
   border-radius: 25px;
   overflow: hidden;
 }
@@ -32,6 +32,11 @@
 }
 
 @media only screen and (min-width: 1024px) {
+
+  .banner {
+    height: 223px;
+  }
+
   .banner-title {
     font-size: 3rem;
     text-align: center;
