--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -3,19 +3,23 @@
   background-color: #000000;
   text-align: center;
   padding: 60px 0;
-  margin-top: 15px;
+  margin-top: auto;
 }
 
 .footer-logo {
   filter: brightness(100);
+  margin-bottom: 15px;
 }
 
 .footer-credit {
   font-size: 0.75rem;
+  margin: 0;
 }
 
 @media only screen and (min-width: 1024px) {
-  .footer {
-    margin-top: 50px;
+  
+  .footer-credit {
+    font-size: 1.5rem;
   }
+
 }
